--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -12,7 +12,7 @@
 		<!-- slider #1 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_civil_engineering.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Civil Engineering</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="civil_engineering_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -50,7 +50,7 @@
 		<!-- slider #2 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_landscape_architecture.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="landscape_architecture_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -88,7 +88,7 @@
 		<!-- slider #3 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_planning.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Planning</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="planning_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -126,7 +126,7 @@
 		<!-- slider #4 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_surveying.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Surveying</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="surveying_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -164,7 +164,7 @@
 		<!-- slider #5 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_gis.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">GIS</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="gis_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -202,7 +202,7 @@
 		<!-- slider #6 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_aerial_mapping.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="projects_aerial_mapping.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
