--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -30,7 +30,7 @@
 							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
@@ -68,7 +68,7 @@
 							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
@@ -106,7 +106,7 @@
 							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
@@ -144,7 +144,7 @@
 							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
@@ -182,7 +182,7 @@
 							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
@@ -220,7 +220,7 @@
 							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
