--- a/lib/client/app/stylesheets/header.css
+++ b/lib/client/app/stylesheets/header.css
@@ -4,7 +4,8 @@
 
 .navigation.menu {display: none;}
 @media screen and (max-width: 959px) {
-    /*.navigation.link {display: none;}*/
+    .navigation.link {display: none;}
+    .navigation.link.mobile {display: block;}
     .navigation.menu {display: inline-block;}
 } 
 
