--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -27,11 +27,11 @@
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak ng-src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
-							<a ng-href="{{item.settings.url}}">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
+							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 32px; right: 32px;">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-		    				</a>
+							</a>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
@@ -67,11 +67,11 @@
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
-							<a ng-href="{{item.settings.url}}">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
+							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 32px; right: 32px;">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-		    				</a>
+							</a>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
@@ -107,11 +107,11 @@
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
-							<a ng-href="{{item.settings.url}}">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
+							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 32px; right: 32px;">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-		    				</a>
+							</a>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
@@ -147,11 +147,11 @@
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
-							<a ng-href="{{item.settings.url}}">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
+							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 32px; right: 32px;">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-		    				</a>
+							</a>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
@@ -187,11 +187,11 @@
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
-							<a ng-href="{{item.settings.url}}">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
+							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 32px; right: 32px;">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-		    				</a>
+							</a>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
@@ -227,11 +227,11 @@
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
-							<a ng-href="{{item.settings.url}}">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: 32px; right: 32px;">
+							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 32px; right: 32px;">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
-		    				</a>
+							</a>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
