--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -35,7 +35,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
-										<h1 class="type heading" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
+										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -75,7 +75,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
-										<h1 class="type heading" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
+										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -115,7 +115,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
-										<h1 class="type heading" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
+										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -155,7 +155,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
-										<h1 class="type heading" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
+										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -195,7 +195,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
-										<h1 class="type heading" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
+										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -235,7 +235,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
-										<h1 class="type heading" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
+										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
